--- a/chrome/android/java/res/xml/main_preferences.xml
+++ b/chrome/android/java/res/xml/main_preferences.xml
@@ -75,11 +75,11 @@
         android:key="welcome_tour"
         android:order="13"
         android:title="@string/prefs_welcome_tour"/>
-    <Preference
+    <!-- <Preference
         android:fragment="org.chromium.chrome.browser.preferences.themes.ThemePreferences"
         android:key="ui_theme"
         android:order="14"
-        android:title="@string/prefs_themes" />
+        android:title="@string/prefs_themes" /> -->
 
     <PreferenceCategory
         android:key="display_section"
