--- a/chrome/android/java/res/values-v17/styles.xml
+++ b/chrome/android/java/res/values-v17/styles.xml
@@ -435,6 +435,15 @@
         <item name="android:popupElevation" tools:targetApi="21">0dp</item>
     </style>
 
+    <style name="NewTabPopupMenuLight" parent="PopupMenuStyle">
+        <item name="android:overlapAnchor" tools:targetApi="21">false</item>
+    </style>
+
+    <style name="NewTabPopupMenuDark" parent="Widget.AppCompat.PopupMenu">
+        <item name="android:textColor">@color/new_tab_menu_text_dark_color</item>
+        <item name="android:itemBackground">@color/new_tab_menu_bg_dark_color</item>
+    </style>
+
     <!-- Bubble styles -->
     <style name="TextBubbleAnimation">
         <item name="android:windowEnterAnimation">@anim/textbubble_in</item>
@@ -974,6 +983,8 @@
     </style>
     <style name="BraveRewardsSwitchTheme">
         <item name="colorControlActivated">@color/brave_rewards_theme_color</item>
+        <item name="colorSwitchThumbNormal">@color/modern_grey_600</item>
+        <item name="android:colorForeground">@color/modern_grey_600</item>
     </style>
 
     <style name="BraveSyncToggleOffButtonLeft">
