--- a/chrome/android/java/res/layout/clear_browsing_data_tabs.xml
+++ b/chrome/android/java/res/layout/clear_browsing_data_tabs.xml
@@ -20,7 +20,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:tabTextColor="@color/default_text_color_tertiary"
-        app:tabSelectedTextColor="@color/tab_layout_selected_tab_color"
+        app:tabSelectedTextColor="@color/brave_theme_color"
         app:tabMode="fixed"
         app:tabMaxWidth="0dp"
         app:tabGravity="fill"/>
