new tab context menu always dark (#2105)
* Update conetxt menu for android 6.0

* Update DDG modal

* Remove brave sync border

* Update border color for brave sync

--- a/chrome/android/java/res/values-v17/styles.xml
+++ b/chrome/android/java/res/values-v17/styles.xml
@@ -505,8 +505,9 @@
         <item name="android:popupElevation" tools:targetApi="21">0dp</item>
     </style>
 
-    <style name="NewTabPopupMenuLight" parent="PopupMenuStyle">
-        <item name="android:overlapAnchor" tools:targetApi="21">false</item>
+    <style name="NewTabPopupMenuLight" parent="Widget.AppCompat.PopupMenu">
+        <item name="android:textColor">@android:color/black</item>
+        <item name="android:itemBackground">@android:color/white</item>
     </style>
 
     <style name="NewTabPopupMenuDark" parent="Widget.AppCompat.PopupMenu">
