--- a/chrome/android/java/res/layout/contacts_picker_toolbar.xml
+++ b/chrome/android/java/res/layout/contacts_picker_toolbar.xml
@@ -31,6 +31,6 @@
             android:layout_height="wrap_content"
             android:enabled="false"
             android:text="@string/done"
-            style="@style/TextButton" />
+            style="@style/BraveTextButton" />
     </LinearLayout>
 </org.chromium.chrome.browser.contacts_picker.ContactsPickerToolbar>
