--- a/chrome/android/java/res/layout/data_reduction_stats_layout.xml
+++ b/chrome/android/java/res/layout/data_reduction_stats_layout.xml
@@ -101,7 +101,7 @@
             android:layout_gravity="center"
             android:layout_marginTop="24dp"
             android:text="@string/data_reduction_usage_reset_statistics_button"
-            style="@style/TextButton" />
+            style="@style/BraveTextButton" />
 
     </LinearLayout>
 
