--- a/chrome/android/java/res/layout/payment_request_bottom_bar.xml
+++ b/chrome/android/java/res/layout/payment_request_bottom_bar.xml
@@ -38,7 +38,7 @@
         android:layout_width="wrap_content"
         android:layout_height="36dp"
         android:text="@string/payments_edit_button"
-        style="@style/TextButton" />
+        style="@style/BraveTextButton" />
 
     <org.chromium.ui.widget.ButtonCompat
         android:id="@+id/button_primary"
