--- a/chrome/android/java/res/layout/payment_request_error.xml
+++ b/chrome/android/java/res/layout/payment_request_error.xml
@@ -40,6 +40,6 @@
         android:layout_gravity="end"
         android:layout_marginEnd="@dimen/editor_dialog_section_small_spacing"
         android:layout_marginBottom="@dimen/editor_dialog_section_small_spacing"
-        style="@style/TextButton" />
+        style="@style/BraveTextButton" />
 
 </org.chromium.chrome.browser.payments.ui.PaymentRequestUiErrorView>
