--- a/chrome/android/java/res/layout/snackbar.xml
+++ b/chrome/android/java/res/layout/snackbar.xml
@@ -77,6 +77,6 @@
             android:layout_gravity="center_vertical"
             android:paddingEnd="24dp"
             android:paddingStart="24dp"
-            style="@style/TextButton" />
+            style="@style/BraveTextButton" />
     </LinearLayout>
 </RelativeLayout>
