--- a/chrome/android/java/res/layout/suspended_tab.xml
+++ b/chrome/android/java/res/layout/suspended_tab.xml
@@ -62,6 +62,6 @@
             android:layout_gravity="end"
             android:gravity="center"
             android:text="@string/preferences"
-            style="@style/TextButton" />
+            style="@style/BraveTextButton" />
     </LinearLayout>
 </ScrollView>
